# f1_bookie_app

./: .gitignore  CMakeLists.txt  README.md  app.py  create_new_table.py  database_random_actions.py  f1_data.db  script.js  styles.css
src/: main.cpp
static/: script.js  styles.css
templates/: index.html
ui/: appwindow.slint  option-bar-tile.slint
